# Homework

./: README.md  example.py  log.txt  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test-mask-card_py.html  z_a44f0ac069e85531_test-proces_py.html  z_a44f0ac069e85531_test-widget_py.html
src/: __init__.py  generators.py  masks.py  processing.py  widget.py
tests/: coftest.py  mask-card.py  test-proces.py  test_generators.py  test_masks.py  test_widget.py
