 [project]
name = "homework"
version = "0.1.0"
description = ""
authors = [
    {name = "Iakov"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.17.1,<2.0.0)",
    "isort (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.4"
flake8 = "^7.3.0"
mypy = "^1.17.1"


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
requests = "^2.32.5"
mypy = "^1.17.1"
flake8 = "^7.3.0"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.isort]
# максимальная длина строки
line_length = 119

